hphp/hack/test/typecheck/static_property_declaration_missing_visibility_modifier.php
<?hh
class C {
  static int $x = 42;
}
